include/yetty/ygui/ygui.h


typedef struct uv_loop_s uv_loop_t;
int yetty_ygui_init(void);
void yetty_ygui_shutdown(void);
struct yetty_ygui_engine;
struct yetty_ygui_widget;
struct yetty_ygui_theme;
typedef enum {
    YETTY_YGUI_WIDGET_BUTTON,
    YETTY_YGUI_WIDGET_LABEL,
    YETTY_YGUI_WIDGET_SLIDER,
    YETTY_YGUI_WIDGET_CHECKBOX,
    YETTY_YGUI_WIDGET_TEXTINPUT,
    YETTY_YGUI_WIDGET_PANEL,
    YETTY_YGUI_WIDGET_HBOX,
    YETTY_YGUI_WIDGET_VBOX,
    YETTY_YGUI_WIDGET_DROPDOWN,
    YETTY_YGUI_WIDGET_LISTBOX,
    YETTY_YGUI_WIDGET_TABLE,
    YETTY_YGUI_WIDGET_TABBAR,
    YETTY_YGUI_WIDGET_COLORPICKER,
    YETTY_YGUI_WIDGET_SCROLLAREA,
    YETTY_YGUI_WIDGET_PROGRESS,
    YETTY_YGUI_WIDGET_SEPARATOR,
    YETTY_YGUI_WIDGET_POPUP,
    YETTY_YGUI_WIDGET_COLLAPSING_HEADER,
    YETTY_YGUI_WIDGET_TOOLTIP,
    YETTY_YGUI_WIDGET_SELECTABLE,
    YETTY_YGUI_WIDGET_CHOICEBOX,
    YETTY_YGUI_WIDGET_VSCROLLBAR,
    YETTY_YGUI_WIDGET_HSCROLLBAR,
    YETTY_YGUI_WIDGET_LIST,
    YETTY_YGUI_WIDGET_TREE_NODE,
    YETTY_YGUI_WIDGET_CUSTOM,
} ygui_widget_type_t;
typedef enum {
    YETTY_YGUI_EVENT_NONE = 0,
    YETTY_YGUI_EVENT_CLICK,
    YETTY_YGUI_EVENT_PRESS,
    YETTY_YGUI_EVENT_RELEASE,
    YETTY_YGUI_EVENT_CHANGE,
    YETTY_YGUI_EVENT_SCROLL,
    YETTY_YGUI_EVENT_FOCUS,
    YETTY_YGUI_EVENT_BLUR,
    YETTY_YGUI_EVENT_KEY,
    YETTY_YGUI_EVENT_TEXT,
} ygui_event_type_t;
typedef enum {
    YETTY_YGUI_CANVAS_FIXED, 
    YETTY_YGUI_CANVAS_FIT    
} ygui_canvas_mode_t;
typedef enum {
    YETTY_YGUI_SCALE_OFF, 
    YETTY_YGUI_SCALE_ON   
} ygui_scale_mode_t;
typedef struct {
    const char *widget_id;
    ygui_event_type_t type;
    union {
        float float_value;
        int32_t int_value;
        int bool_value;
        const char *string_value;
        struct {
            float r, g, b, a;
        } color;
        struct {
            float x, y;
        } scroll;
        struct {
            uint32_t key;
            int mods;
        } key;
    } data;
} ygui_event_t;
typedef void (*ygui_event_callback_t)(const ygui_event_t *event, void *userdata);
typedef void (*ygui_key_callback_t)(struct yetty_ygui_engine *engine, uint32_t key, int mods, void *userdata);
typedef void (*ygui_click_callback_t)(struct yetty_ygui_widget *widget, void *userdata);
typedef void (*ygui_change_callback_t)(struct yetty_ygui_widget *widget, float value, void *userdata);
typedef void (*ygui_text_callback_t)(struct yetty_ygui_widget *widget, const char *text, void *userdata);
typedef void (*ygui_check_callback_t)(struct yetty_ygui_widget *widget, int checked, void *userdata);
typedef void (*ygui_resize_callback_t)(struct yetty_ygui_engine *engine, float new_w, float new_h,
                                       float prev_w, float prev_h, void *userdata);
struct ygui_engine_ptr_result yetty_ygui_engine_create(const char *card_name, int x, int y, int cols,
                                                 int rows);
struct ygui_engine_ptr_result yetty_ygui_engine_create_with_pixel_hint(const char *card_name, int x,
                                                                 int y, float width_hint,
                                                                 float height_hint);
struct yetty_ycore_void_result yetty_ygui_engine_destroy(struct yetty_ygui_engine *engine);
struct yetty_ycore_void_result yetty_ygui_engine_show(struct yetty_ygui_engine *engine);
struct yetty_ycore_void_result yetty_ygui_engine_render(struct yetty_ygui_engine *engine);
struct yetty_ycore_void_result yetty_ygui_engine_layout(struct yetty_ygui_engine *engine);
void yetty_ygui_engine_attach(struct yetty_ygui_engine *engine, uv_loop_t *loop);
void yetty_ygui_engine_run(struct yetty_ygui_engine *engine);
void yetty_ygui_engine_stop(struct yetty_ygui_engine *engine);
void yetty_ygui_engine_set_size(struct yetty_ygui_engine *engine, float width, float height);
void yetty_ygui_engine_get_size(const struct yetty_ygui_engine *engine, float *width, float *height);
void yetty_ygui_engine_set_theme(struct yetty_ygui_engine *engine, struct yetty_ygui_theme *theme);
void yetty_ygui_engine_on_key(struct yetty_ygui_engine *engine, ygui_key_callback_t callback, void *userdata);
void yetty_ygui_engine_set_event_callback(struct yetty_ygui_engine *engine, ygui_event_callback_t callback,
                                    void *userdata);
int yetty_ygui_engine_is_dirty(const struct yetty_ygui_engine *engine);
void yetty_ygui_engine_mark_dirty(struct yetty_ygui_engine *engine);
void yetty_ygui_engine_set_canvas_mode(struct yetty_ygui_engine *engine, ygui_canvas_mode_t mode);
void yetty_ygui_engine_set_scale_mode(struct yetty_ygui_engine *engine, ygui_scale_mode_t mode);
void yetty_ygui_engine_on_resize(struct yetty_ygui_engine *engine, ygui_resize_callback_t callback, void *userdata);
float yetty_ygui_engine_get_zoom(const struct yetty_ygui_engine *engine);
float yetty_ygui_engine_get_scroll_x(const struct yetty_ygui_engine *engine);
float yetty_ygui_engine_get_scroll_y(const struct yetty_ygui_engine *engine);
void yetty_ygui_engine_subscribe_view_changes(struct yetty_ygui_engine *engine, int enable);
void yetty_ygui_engine_set_zoom(struct yetty_ygui_engine *engine, float level);
void yetty_ygui_engine_scroll_to(struct yetty_ygui_engine *engine, float x, float y);
void yetty_ygui_engine_scroll_by(struct yetty_ygui_engine *engine, float dx, float dy);
struct yetty_ygui_widget *yetty_ygui_engine_button(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                           float h, const char *label);
struct yetty_ygui_widget *yetty_ygui_engine_label(struct yetty_ygui_engine *engine, const char *id, float x, float y,
                          const char *text);
struct yetty_ygui_widget *yetty_ygui_engine_slider(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                           float h, float min_val, float max_val, float value);
struct yetty_ygui_widget *yetty_ygui_engine_checkbox(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                             float h, const char *label, int checked);
struct yetty_ygui_widget *yetty_ygui_engine_textinput(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                              float h, const char *placeholder);
struct yetty_ygui_widget *yetty_ygui_engine_panel(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                          float h);
struct yetty_ygui_widget *yetty_ygui_engine_hbox(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w, float h);
struct yetty_ygui_widget *yetty_ygui_engine_vbox(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w, float h);
struct yetty_ygui_widget *yetty_ygui_engine_dropdown(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                             float h, const char **options, int option_count);
struct yetty_ygui_widget *yetty_ygui_engine_progress(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                             float h, float value);
struct yetty_ygui_widget *yetty_ygui_engine_separator(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                              float h);
struct yetty_ygui_widget *yetty_ygui_engine_colorpicker(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                                float h);
struct yetty_ygui_widget *yetty_ygui_engine_popup(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w, float h,
                          const char *label);
struct yetty_ygui_widget *yetty_ygui_engine_collapsing_header(struct yetty_ygui_engine *engine, const char *id, float x, float y,
                                      float w, float h, const char *label);
struct yetty_ygui_widget *yetty_ygui_engine_tooltip(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                            float h, const char *label);
struct yetty_ygui_widget *yetty_ygui_engine_selectable(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                               float h, const char *label);
struct yetty_ygui_widget *yetty_ygui_engine_choicebox(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                              float h, const char **options, int option_count);
struct yetty_ygui_widget *yetty_ygui_engine_vscrollbar(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                               float h);
struct yetty_ygui_widget *yetty_ygui_engine_hscrollbar(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                               float h);
struct yetty_ygui_widget *yetty_ygui_engine_list(struct yetty_ygui_engine *engine, const char *id,
                                                  float x, float y, float w, float h);
struct yetty_ygui_widget *yetty_ygui_engine_tree_node(struct yetty_ygui_engine *engine,
                                                      const char *id, const char *label);
void yetty_ygui_widget_button_on_click(struct yetty_ygui_widget *button, ygui_click_callback_t callback, void *userdata);
void yetty_ygui_widget_slider_on_change(struct yetty_ygui_widget *slider, ygui_change_callback_t callback, void *userdata);
void yetty_ygui_widget_checkbox_on_change(struct yetty_ygui_widget *checkbox, ygui_check_callback_t callback,
                             void *userdata);
void yetty_ygui_widget_textinput_on_change(struct yetty_ygui_widget *input, ygui_text_callback_t callback, void *userdata);
void yetty_ygui_widget_add_child(struct yetty_ygui_widget *parent, struct yetty_ygui_widget *child);
void yetty_ygui_widget_remove_child(struct yetty_ygui_widget *parent, struct yetty_ygui_widget *child);
void yetty_ygui_widget_remove(struct yetty_ygui_widget *widget);
struct yetty_ygui_widget *yetty_ygui_widget_parent(struct yetty_ygui_widget *widget);
struct yetty_ygui_widget *yetty_ygui_widget_first_child(struct yetty_ygui_widget *widget);
struct yetty_ygui_widget *yetty_ygui_widget_next_sibling(struct yetty_ygui_widget *widget);
const char *yetty_ygui_widget_id(const struct yetty_ygui_widget *widget);
ygui_widget_type_t yetty_ygui_widget_type(const struct yetty_ygui_widget *widget);
void yetty_ygui_widget_set_position(struct yetty_ygui_widget *widget, float x, float y);
void yetty_ygui_widget_get_position(const struct yetty_ygui_widget *widget, float *x, float *y);
void yetty_ygui_widget_set_size(struct yetty_ygui_widget *widget, float w, float h);
void yetty_ygui_widget_get_size(const struct yetty_ygui_widget *widget, float *w, float *h);
void yetty_ygui_widget_get_layout_box(const struct yetty_ygui_widget *widget, float *x, float *y,
                                      float *w, float *h);
void yetty_ygui_widget_set_visible(struct yetty_ygui_widget *widget, int visible);
int yetty_ygui_widget_is_visible(const struct yetty_ygui_widget *widget);
void yetty_ygui_widget_set_enabled(struct yetty_ygui_widget *widget, int enabled);