bindings/python/ygui.py


def _bind_functions() -> None:
    """Wire argtypes/restype on every function. Called by load()."""
    if _lib is None:
        return
    _lib.yetty_ygui_init.argtypes = []
    _lib.yetty_ygui_init.restype = c_int
    _lib.yetty_ygui_shutdown.argtypes = []
    _lib.yetty_ygui_shutdown.restype = None
    _lib.yetty_ygui_engine_create.argtypes = [POINTER(c_char), c_int, c_int, c_int, c_int]
    _lib.yetty_ygui_engine_create.restype = ygui_engine_ptr_result
    _lib.yetty_ygui_engine_create_with_pixel_hint.argtypes = [POINTER(c_char), c_int, c_int, c_float, c_float]
    _lib.yetty_ygui_engine_create_with_pixel_hint.restype = ygui_engine_ptr_result
    _lib.yetty_ygui_engine_destroy.argtypes = [POINTER(yetty_ygui_engine)]
    _lib.yetty_ygui_engine_destroy.restype = yetty_ycore_void_result
    _lib.yetty_ygui_engine_show.argtypes = [POINTER(yetty_ygui_engine)]
    _lib.yetty_ygui_engine_show.restype = yetty_ycore_void_result
    _lib.yetty_ygui_engine_render.argtypes = [POINTER(yetty_ygui_engine)]
    _lib.yetty_ygui_engine_render.restype = yetty_ycore_void_result
    _lib.yetty_ygui_engine_layout.argtypes = [POINTER(yetty_ygui_engine)]
    _lib.yetty_ygui_engine_layout.restype = yetty_ycore_void_result
    _lib.yetty_ygui_engine_attach.argtypes = [POINTER(yetty_ygui_engine), POINTER(uv_loop_s)]
    _lib.yetty_ygui_engine_attach.restype = None
    _lib.yetty_ygui_engine_run.argtypes = [POINTER(yetty_ygui_engine)]
    _lib.yetty_ygui_engine_run.restype = None
    _lib.yetty_ygui_engine_stop.argtypes = [POINTER(yetty_ygui_engine)]
    _lib.yetty_ygui_engine_stop.restype = None
    _lib.yetty_ygui_engine_set_size.argtypes = [POINTER(yetty_ygui_engine), c_float, c_float]
    _lib.yetty_ygui_engine_set_size.restype = None
    _lib.yetty_ygui_engine_get_size.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_float), POINTER(c_float)]
    _lib.yetty_ygui_engine_get_size.restype = None
    _lib.yetty_ygui_engine_set_theme.argtypes = [POINTER(yetty_ygui_engine), POINTER(yetty_ygui_theme)]
    _lib.yetty_ygui_engine_set_theme.restype = None
    _lib.yetty_ygui_engine_on_key.argtypes = [POINTER(yetty_ygui_engine), POINTER(CFUNCTYPE(None, POINTER(yetty_ygui_engine), c_uint, c_int, c_void_p)), c_void_p]
    _lib.yetty_ygui_engine_on_key.restype = None
    _lib.yetty_ygui_engine_set_event_callback.argtypes = [POINTER(yetty_ygui_engine), POINTER(CFUNCTYPE(None, POINTER(ygui_event_t), c_void_p)), c_void_p]
    _lib.yetty_ygui_engine_set_event_callback.restype = None
    _lib.yetty_ygui_engine_is_dirty.argtypes = [POINTER(yetty_ygui_engine)]
    _lib.yetty_ygui_engine_is_dirty.restype = c_int
    _lib.yetty_ygui_engine_mark_dirty.argtypes = [POINTER(yetty_ygui_engine)]
    _lib.yetty_ygui_engine_mark_dirty.restype = None
    _lib.yetty_ygui_engine_set_canvas_mode.argtypes = [POINTER(yetty_ygui_engine), c_int]
    _lib.yetty_ygui_engine_set_canvas_mode.restype = None
    _lib.yetty_ygui_engine_set_scale_mode.argtypes = [POINTER(yetty_ygui_engine), c_int]
    _lib.yetty_ygui_engine_set_scale_mode.restype = None
    _lib.yetty_ygui_engine_on_resize.argtypes = [POINTER(yetty_ygui_engine), POINTER(CFUNCTYPE(None, POINTER(yetty_ygui_engine), c_float, c_float, c_float, c_float, c_void_p)), c_void_p]
    _lib.yetty_ygui_engine_on_resize.restype = None
    _lib.yetty_ygui_engine_get_zoom.argtypes = [POINTER(yetty_ygui_engine)]
    _lib.yetty_ygui_engine_get_zoom.restype = c_float
    _lib.yetty_ygui_engine_get_scroll_x.argtypes = [POINTER(yetty_ygui_engine)]
    _lib.yetty_ygui_engine_get_scroll_x.restype = c_float
    _lib.yetty_ygui_engine_get_scroll_y.argtypes = [POINTER(yetty_ygui_engine)]
    _lib.yetty_ygui_engine_get_scroll_y.restype = c_float
    _lib.yetty_ygui_engine_subscribe_view_changes.argtypes = [POINTER(yetty_ygui_engine), c_int]
    _lib.yetty_ygui_engine_subscribe_view_changes.restype = None
    _lib.yetty_ygui_engine_set_zoom.argtypes = [POINTER(yetty_ygui_engine), c_float]
    _lib.yetty_ygui_engine_set_zoom.restype = None
    _lib.yetty_ygui_engine_scroll_to.argtypes = [POINTER(yetty_ygui_engine), c_float, c_float]
    _lib.yetty_ygui_engine_scroll_to.restype = None
    _lib.yetty_ygui_engine_scroll_by.argtypes = [POINTER(yetty_ygui_engine), c_float, c_float]
    _lib.yetty_ygui_engine_scroll_by.restype = None
    _lib.yetty_ygui_engine_button.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float, POINTER(c_char)]
    _lib.yetty_ygui_engine_button.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_label.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, POINTER(c_char)]
    _lib.yetty_ygui_engine_label.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_slider.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float, c_float, c_float, c_float]
    _lib.yetty_ygui_engine_slider.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_checkbox.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float, POINTER(c_char), c_int]
    _lib.yetty_ygui_engine_checkbox.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_textinput.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float, POINTER(c_char)]
    _lib.yetty_ygui_engine_textinput.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_panel.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float]
    _lib.yetty_ygui_engine_panel.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_hbox.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float]
    _lib.yetty_ygui_engine_hbox.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_vbox.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float]
    _lib.yetty_ygui_engine_vbox.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_dropdown.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float, POINTER(POINTER(c_char)), c_int]
    _lib.yetty_ygui_engine_dropdown.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_progress.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float, c_float]
    _lib.yetty_ygui_engine_progress.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_separator.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float]
    _lib.yetty_ygui_engine_separator.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_colorpicker.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float]
    _lib.yetty_ygui_engine_colorpicker.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_popup.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float, POINTER(c_char)]
    _lib.yetty_ygui_engine_popup.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_collapsing_header.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float, POINTER(c_char)]
    _lib.yetty_ygui_engine_collapsing_header.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_tooltip.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float, POINTER(c_char)]
    _lib.yetty_ygui_engine_tooltip.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_selectable.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float, POINTER(c_char)]
    _lib.yetty_ygui_engine_selectable.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_choicebox.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float, POINTER(POINTER(c_char)), c_int]
    _lib.yetty_ygui_engine_choicebox.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_vscrollbar.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float]
    _lib.yetty_ygui_engine_vscrollbar.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_hscrollbar.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float]
    _lib.yetty_ygui_engine_hscrollbar.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_list.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), c_float, c_float, c_float, c_float]
    _lib.yetty_ygui_engine_list.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_tree_node.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char), POINTER(c_char)]
    _lib.yetty_ygui_engine_tree_node.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_widget_button_on_click.argtypes = [POINTER(yetty_ygui_widget), POINTER(CFUNCTYPE(None, POINTER(yetty_ygui_widget), c_void_p)), c_void_p]
    _lib.yetty_ygui_widget_button_on_click.restype = None
    _lib.yetty_ygui_widget_slider_on_change.argtypes = [POINTER(yetty_ygui_widget), POINTER(CFUNCTYPE(None, POINTER(yetty_ygui_widget), c_float, c_void_p)), c_void_p]
    _lib.yetty_ygui_widget_slider_on_change.restype = None
    _lib.yetty_ygui_widget_checkbox_on_change.argtypes = [POINTER(yetty_ygui_widget), POINTER(CFUNCTYPE(None, POINTER(yetty_ygui_widget), c_int, c_void_p)), c_void_p]
    _lib.yetty_ygui_widget_checkbox_on_change.restype = None
    _lib.yetty_ygui_widget_textinput_on_change.argtypes = [POINTER(yetty_ygui_widget), POINTER(CFUNCTYPE(None, POINTER(yetty_ygui_widget), POINTER(c_char), c_void_p)), c_void_p]
    _lib.yetty_ygui_widget_textinput_on_change.restype = None
    _lib.yetty_ygui_widget_add_child.argtypes = [POINTER(yetty_ygui_widget), POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_add_child.restype = None
    _lib.yetty_ygui_widget_remove_child.argtypes = [POINTER(yetty_ygui_widget), POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_remove_child.restype = None
    _lib.yetty_ygui_widget_remove.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_remove.restype = None
    _lib.yetty_ygui_widget_parent.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_parent.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_widget_first_child.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_first_child.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_widget_next_sibling.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_next_sibling.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_widget_id.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_id.restype = POINTER(c_char)
    _lib.yetty_ygui_widget_type.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_type.restype = c_int
    _lib.yetty_ygui_widget_set_position.argtypes = [POINTER(yetty_ygui_widget), c_float, c_float]
    _lib.yetty_ygui_widget_set_position.restype = None
    _lib.yetty_ygui_widget_get_position.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_float), POINTER(c_float)]
    _lib.yetty_ygui_widget_get_position.restype = None
    _lib.yetty_ygui_widget_set_size.argtypes = [POINTER(yetty_ygui_widget), c_float, c_float]
    _lib.yetty_ygui_widget_set_size.restype = None
    _lib.yetty_ygui_widget_get_size.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_float), POINTER(c_float)]
    _lib.yetty_ygui_widget_get_size.restype = None
    _lib.yetty_ygui_widget_get_layout_box.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_float), POINTER(c_float), POINTER(c_float), POINTER(c_float)]
    _lib.yetty_ygui_widget_get_layout_box.restype = None
    _lib.yetty_ygui_widget_set_visible.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_set_visible.restype = None
    _lib.yetty_ygui_widget_is_visible.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_is_visible.restype = c_int
    _lib.yetty_ygui_widget_set_enabled.argtypes = [POINTER(yetty_ygui_widget), c_int]
